# Penny

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  DEVELOPMENT.md  Makefile  README.md  TASK.md  flake.nix  justfile  package-lock.json  package.json  pyproject.toml  rules.py  vite.config.mjs
.github/workflows/: ci.yml
.pre-commit-cache/: db.db
ADR/: 001-DESIGN.md  002-Core-Views-and-Workflow.md  003-CSV-Import-Architecture.md  004-Initial-Import-Design.md  005-Account-Register.md  006-Frontend-Bundling.md  007-Transaction-Parsing.md  008-Transaction-Classification.md  009-Account-Balance-Snapshots.md  009-Transfer-Neutralization.md  010-Implementation-Plan.md  010-Portable-Event-Log-Storage.md  011-Layered-Architecture.md  012-Ledger-Based-Vault.md  013-Frontend-State-Architecture.md  014-Predicate-Language-for-Filtering-and-Rules.md  ADR-010-layered-architecture.md
REVIEW/: 001-ui-code-review.md  002-app-js-modularization.md  2026-04-04-session-review.md
agents/: CONTEXT.md  WORKFLOW.md
docs/: CLI.md
scripts/: generate_demo_data.py  release.sh
src/f4u/: __init__.py  __main__.py  launcher.py  server.py
src/penny/: __init__.py  __main__.py  accounts.py  balance_projection.py  cli.py  config.py  db.py  default_rules.py  demo_bootstrap.py  demo_data.py  launcher.py  reports.py  runtime_rules.py  server.py  sql.py  transactions.py
src/penny/accounts/: __init__.py  models.py  registry.py  storage.py
src/penny/api/: __init__.py  accounts.py  dashboard.py  helpers.py  import_.py  rules.py  sql.py
src/penny/classify/: __init__.py  engine.py  pipeline.py
src/penny/fixtures/: balance-anchors.tsv  demo_rules.py
src/penny/import_/: __init__.py  base.py  detection.py  utils.py
src/penny/import_/parsers/: __init__.py  buchungstext.py  comdirect.py
src/penny/ingest/: __init__.py  base.py  detection.py
src/penny/ingest/banks/: __init__.py  comdirect.py  sparkasse.py
src/penny/ingest/formats/: __init__.py  buchungstext.py  camt_v8.py  utils.py
src/penny/static/: api.js  app.js  charts.js  index.html  styles.css
src/penny/static/app/: init.js  lifecycle.js  urlState.js  viewModels.js
src/penny/static/components/: DateFilterPanel.js  SelectorHeader.js  SidebarNav.js
src/penny/static/utils/: color.js  date.js  format.js
src/penny/static/views/: AccountsView.js  BalanceView.js  ImportView.js  ReportView.js  RulesView.js  SettingsView.js  TransactionsList.js  TransactionsView.js  accounts.js  balance.js  import.js  report.js  rules.js  selector.js  transactions.js
src/penny/transactions/: __init__.py  models.py  storage.py
src/penny/transfers/: __init__.py  engine.py
src/penny/vault/: __init__.py  apply.py  balance_file.py  config.py  ingest.py  ledger.py  log.py  manifests.py  mutations.py  replay.py  rules.py  rules_store.py  startup.py  writes.py
tests/: TEST_INDEX.md  TEST_STRATEGY.md  conftest.py  helpers.py  test_accounts.py  test_apply.py  test_buchungstext.py  test_classify.py  test_cli_help.py  test_cli_reports_and_filters.py  test_comdirect_parser.py  test_comdirect_parser_edge_cases.py  test_dashboard_api.py  test_import_detection.py  test_import_integration.py  test_rules_module.py  test_sparkasse_parser.py  test_transfers.py  test_vault.py  test_vault_cli.py  test_vault_ingest.py  test_vault_startup.py
tests/e2e/: conftest.py  test_accounts.py  test_classify.py  test_cli_reports_and_filters.py  test_dashboard_api.py  test_demo_import_e2e.py  test_import_detection.py  test_import_integration.py  test_vault_ingest.py  test_vault_startup.py
tests/fixtures/: 20260401-12345678-umsatz-camt52v8.CSV  rules_primary.py  rules_reordered.py  umsaetze_9788862492_20260331-1354.csv
tests/ui/: README.md  import-demo.spec.js  playwright.config.mjs
tests/ui/.playwright/penny-9321/: history.tsv  penny.sqlite
tests/ui/.playwright/penny-9321-1775416128784/: history.tsv  mutations.tsv  penny.sqlite
tests/ui/.playwright/penny-9321-1775416162121/: history.tsv  penny.sqlite
tests/ui/.playwright/penny-9321-1775416277131/: history.tsv  penny.sqlite
tests/ui/.playwright/penny-9321-1775416277131/transactions/0001_2026-04-05T19:11:19Z/: 20260404-12345678-umsatz-camt52v8.CSV
tests/unit/: conftest.py  test_accounts.py  test_balance_projection.py  test_buchungstext.py  test_classify.py  test_comdirect_parser.py  test_comdirect_parser_edge_cases.py  test_import_detection.py  test_ledger.py  test_rules_module.py  test_sparkasse_parser.py  test_transaction_filters.py  test_transfers.py  test_vault.py
