[project]
name = "penny"
version = "0.1.0"
description = "Penny - Personal finance tracking and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "toga>=0.4.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
penny = "penny.cli:main"
penny-gui = "penny.launcher:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penny"]

# Briefcase configuration for native app packaging
[tool.briefcase]
project_name = "Penny"
bundle = "com.hartmann.penny"
version = "0.1.0"
url = "https://github.com/hhartmann/penny"
license.text = "MIT"
author = "Heinrich Hartmann"

[tool.briefcase.app.penny]
formal_name = "Penny"
description = "Personal finance tracking and analysis"
icon = "resources/icon"
sources = ["src/penny"]
requires = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "toga>=0.4.0",
]

[tool.briefcase.app.penny.macOS]
requires = []

[tool.briefcase.app.penny.linux]
requires = []

[dependency-groups]
dev = [
    "briefcase>=0.3.21",
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["penny"]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end or file-backed tests that exercise the real app interface",
]
